--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "tetris using typescript",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack"
+    "start": "npm-run-all --parallel watch:build watch:server",
+    "build": "webpack",
+    "watch:build": "webpack --watch",
+    "watch:server": " webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,8 @@
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
