--- a/package.json
+++ b/package.json
@@ -1,34 +1,15 @@
 {
   "name": "typescript-tetris",
-  "version": "1.0.0",
-  "description": "tetris using typescript",
-  "main": "index.js",
+  "version": "0.0.0",
   "scripts": {
-    "start": "npm-run-all --parallel watch:build watch:server",
-    "build": "webpack",
-    "watch:build": "webpack --watch",
-    "watch:server": " webpack serve --open"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jakobchis/typescript-tetris.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jakobchis/typescript-tetris/issues"
-  },
-  "homepage": "https://github.com/jakobchis/typescript-tetris#readme",
   "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "html-webpack-plugin": "^5.3.2",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.3.5",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "npm-run-all": "^4.1.5"
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "@types/lodash": "^4.14.178",
+    "lodash": "^4.17.21"
   }
 }
