--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettify": "npx prettier -w '**/*.{js,ts,tsx,json,html}'"
   },
   "devDependencies": {
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
     "@types/lodash": "^4.14.178",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2"
+  },
+  "dependencies": {
     "lodash": "^4.17.21"
   }
 }
