--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.7",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   },
